--- a/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
+++ b/donate-ui/src/app/pages/donation-methods/_donation-methods.theme.scss
@@ -32,6 +32,7 @@
     background-size: contain;
     padding: $uxg-spacing-2;
     padding-right: $uxg-spacing-5;
+    margin-bottom: $uxg-spacing-3;
   }
 
   .pay-btn {
