--- a/donate-ui/src/global.scss
+++ b/donate-ui/src/global.scss
@@ -47,9 +47,9 @@
 @import "./app/pages/register/register.theme";
 @import "./app/pages/user-profile/user-profile.page.scss";
 @import "./app/pages/user-profile/profile/profile.component.scss";
-@import "./app/pages/transactions/transactions.page.scss";
 @import "./app/pages/tabs/tabs.theme";
 @import "./app/pages/filters/filters.theme";
+@import "./app/pages/transactions/transactions.theme";
 
 :root {
   --ion-background-color: white !important;
@@ -134,8 +134,8 @@ $custom-typography: mat-typography-config(
   @include app-topic-list($theme);
   @include app-user-profile-page($theme);
   @include app-user-profile($theme);
-  @include app-transaction-page($theme);
   @include app-tabs($theme);
   @include app-filters($theme);
+  @include app-transaction-page($theme);
 }
 @include app-theme($uxg-light-theme);
