--- a/donate-ui/src/app/pages/home/_home.theme.scss
+++ b/donate-ui/src/app/pages/home/_home.theme.scss
@@ -5,7 +5,7 @@
 
   .charity-card {
     .image-container {
-      height: 150px;
+      height: auto;
       .charity-image {
         width: 100%;
         height: 100%;
