--- a/donate-ui/src/app/pages/transactions/transactions-list/transactions-list.component.html
+++ b/donate-ui/src/app/pages/transactions/transactions-list/transactions-list.component.html
@@ -20,14 +20,14 @@
   </div>
   <div *ngFor="let transaction of transactions">
     <ion-item>
-      <div fxLayout="column" class="pb1 pt1">
+      <div fxLayout="column" class="pb1 pt1 data-container">
         <div class="uxg-subtitle-2">{{ transaction.charityName }}</div>
         <div class="uxg-body-2">
           {{ transaction.transactionType }}: {{ transaction.transactionAmount }}
         </div>
         <div class="uxg-body-2">{{ transaction.date }}</div>
       </div>
-      <div class="uxg-h6 ml-4 donated-amount">
+      <div class="uxg-h6 ml-4 donated-amount-container">
         {{ transaction.donatedAmount }}
       </div>
     </ion-item>
