--- a/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
+++ b/donate-ui/src/app/pages/donation-methods/incognito/incognito.component.html
@@ -10,8 +10,7 @@
   </ion-buttons>
 </ion-header>
 
-<ion-content>
-  <div class="incognito-container">
+  <div class="content incognito-container">
     <h2 class="title">Incognito</h2>
     <p>
       iGive will take a set amount from your account every time you perform an
@@ -66,4 +65,3 @@
 
     <button mat-flat-button color="primary" class="pay-btn" (click)="pay()">Pay</button>
   </div>
-</ion-content>
