--- a/donate-ui/src/app/pages/transactions/transactions.page.html
+++ b/donate-ui/src/app/pages/transactions/transactions.page.html
@@ -3,16 +3,22 @@
   <p class="subtitle">Check in on your donations</p>
 </ion-header>
 
-<ion-content>
+<div class="content">
   <div fxLayoutAlign="center center" class="mt-3 mb-4">
     <mat-button-toggle-group #group="matButtonToggleGroup" value="byCharity">
       <mat-button-toggle value="byCharity">By Charity</mat-button-toggle>
-      <mat-button-toggle value="byTransaction">By Transaction</mat-button-toggle>
+      <mat-button-toggle value="byTransaction"
+        >By Transaction</mat-button-toggle
+      >
     </mat-button-toggle-group>
   </div>
   <ng-container *ngIf="group.value === 'byCharity'">
     <div *ngFor="let charity of charities">
-      <ion-item class="charity-donation" detail="true" (click)="goToCharityDetails(charity.charityId)">
+      <ion-item
+        class="charity-donation"
+        detail="true"
+        (click)="goToCharityDetails(charity.charityId)"
+      >
         <div fxLayout="column" class="pt-1 pb-1">
           <div class="uxg-h6 mb-2">{{charity.charityName}}</div>
           <div class="uxg-body-2">{{charity.donatedAmount}} donated</div>
@@ -29,7 +35,9 @@
       <ion-item>
         <div fxLayout="column" class="pb1 pt1 data-container">
           <div class="uxg-subtitle-2">{{transaction.charityName}}</div>
-          <div class="uxg-body-2">{{transaction.transactionType}}: {{transaction.transactionAmount}}</div>
+          <div class="uxg-body-2">
+            {{transaction.transactionType}}: {{transaction.transactionAmount}}
+          </div>
           <div class="uxg-body-2">{{transaction.date}}</div>
         </div>
         <div class="uxg-h6 ml-4 donated-amount-container">
@@ -38,4 +46,4 @@
       </ion-item>
     </div>
   </ng-container>
-</ion-content>
+</div>
