transactions update, pdf tax form

--- a/donate-ui/src/app/pages/transactions/_transactions.theme.scss
+++ b/donate-ui/src/app/pages/transactions/_transactions.theme.scss
@@ -6,11 +6,10 @@
   }
   .donated-amount-container {
     color: mat-color($primary, default);
-    width: 20%;
     margin: 0;
   }
   .data-container {
-    width: 80%;
+    flex: auto;
   }
   .charity-donation {
     cursor: pointer;
