--- a/donate-ui/src/app/pages/transactions/transactions.page.html
+++ b/donate-ui/src/app/pages/transactions/transactions.page.html
@@ -21,7 +21,7 @@
       >
         <div fxLayout="column" class="pt-1 pb-1">
           <div class="uxg-h6 mb-2">{{charity.charityName}}</div>
-          <div class="uxg-body-2">{{charity.donatedAmount}} donated</div>
+          <div class="uxg-body-2">${{charity.donatedAmount}} donated</div>
         </div>
       </ion-item>
     </div>
@@ -35,13 +35,15 @@
       <ion-item>
         <div fxLayout="column" class="pb1 pt1 data-container">
           <div class="uxg-subtitle-2">{{transaction.charityName}}</div>
-          <div class="uxg-body-2">
+          <!-- <div class="uxg-body-2">
             {{transaction.transactionType}}: {{transaction.transactionAmount}}
+          </div> -->
+          <div class="uxg-body-2">
+            {{transaction.created_at | date:'short' }}
           </div>
-          <div class="uxg-body-2">{{transaction.date}}</div>
         </div>
         <div class="uxg-h6 ml-4 donated-amount-container">
-          {{transaction.donatedAmount}}
+          ${{transaction.paymentMethod.donationAmount}}
         </div>
       </ion-item>
     </div>
