--- a/donate-ui/src/app/pages/transactions/tax-forms/tax-forms.component.scss
+++ b/donate-ui/src/app/pages/transactions/tax-forms/tax-forms.component.scss
@@ -11,6 +11,13 @@
     margin-bottom: 16px;
   }
 }
+.pdf-file {
+  .file-label {
+    flex: auto;
+    cursor: pointer;
+  }
+  cursor: pointer;
+}
 .pdf-container {
   height: 100%;
   width: 100%;
