fix keyboard and anddroid form

--- a/donate-ui/src/app/pages/transactions/tax-forms/tax-forms.component.html
+++ b/donate-ui/src/app/pages/transactions/tax-forms/tax-forms.component.html
@@ -51,7 +51,7 @@
       Close
     </button>
     <iframe
-      src="../../../../assets/pdf/COVID-19 Solidarity Response Fund Certificate.pdf"
+      src="/assets/pdf/COVID-19 Solidarity Response Fund Certificate.pdf"
     ></iframe>
   </div>
 </ion-content>
