--- a/IGive-ui/src/app/pages/donation-methods/incognito/incognito.component.html
+++ b/IGive-ui/src/app/pages/donation-methods/incognito/incognito.component.html
@@ -36,11 +36,11 @@
     <mat-form-field appearance="fill" dense class="incognito-fields">
       <mat-label>select option</mat-label>
       <mat-select [(ngModel)]="when">
-        <mat-option value="option1">i use my card</mat-option>
-        <mat-option value="option2">i buy groceries</mat-option>
-        <mat-option value="option3">i buy coffee</mat-option>
-        <mat-option value="option3">i shop online</mat-option>
-        <mat-option value="option3">i buy gas/transit pass</mat-option>
+        <mat-option value="option1">I use my card</mat-option>
+        <mat-option value="option2">I buy groceries</mat-option>
+        <mat-option value="option3">I buy coffee</mat-option>
+        <mat-option value="option3">I shop online</mat-option>
+        <mat-option value="option3">I buy gas/transit pass</mat-option>
       </mat-select>
     </mat-form-field>
 
